Work on problem

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="menu d-lg-flex justify-content-md-between">
                 <span class="righ"> DREAMSHARE</span>
                 <span class="left">
-                <a href="#" class="log text-light">Log in</a>
+                <a href="#" class="log text-light xl">Log in</a>
                 <button type="button" class="btn btn-outline-light">Sign up</button>
             </span>
 
