--- a/index.html
+++ b/index.html
@@ -5,207 +5,109 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Finish work</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./styles/main.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="/main.css">
 </head>
 
-
 <body>
-    <header class="container-background img-fluid d-flex justify-content-center ">
-        <div class="container col-xxl-10 col-xl-10 col-lg-12 col-md-12 col-sm-12 col-xs-12 d-lg-flex justify-content-lg-center">
-            <div class="menu d-lg-flex justify-content-md-between">
-                <span class="righ"> DREAMSHARE</span>
-                <span class="left">
-                <a href="#" class="log text-light xl">Log in</a>
-                <button type="button" class="btn btn-outline-light">Sign up</button>
-            </span>
+    <div class="container">
+        <header>
+
+            <div class="images">
 
             </div>
-            <div class="header_page__header">
+            <div class="names">
+                <h3 class="names_size">Кудрик Дмитрій</h3>
+                <p class="linear_gradient">Економіст
+                    <hr>
+                    <p class="linear_gradient_next"> Веб-розробник</p>
+                </p>
+            </div>
+        </header>
+        <main>
+            <div class="container_right">
+                <nav class="contact">
+                    <div class="message"></div>
+                    <div class="message_mail"> dimakudryk@ukr.net</div>
+                </nav>
+                <nav class="contact">
+                    <div class="message_number"></div>
+                    <div class="message_mail">+380977209317</div>
+                </nav>
+                <nav class="contact">
+                    <div class="message_location"> </div>
+                    <div class="message_mail">Шепетівка</div>
+                </nav>
+                <nav class="contact">
+                    <div class="message_facebook">
+                        <a href="https://www.facebook.com/dmytrii.kudryk.9" target="blank">
+                            <img class="facebook_image" src="./images/premium-icon-facebook-4494475.png" alt=""> </a>
+                    </div>
+                    <div class="message_mail"> Жми на картинку </div>
+                </nav>
 
-                <span class="header_page__text">
-                <h2 class="header_page__h2">SHARE YOUR HOLIDAY DREAM</h2>
-                <p class="header__page_p">And find the perfect partner to fullfill it</p>
-                <button type="button" class="btn btn-danger">Find your holiday partner</button>
-        </div>
+                <nav class="education">
+                    <h3 class="title">Освіта</h3>
+                    <p class="about_me_education">
+                        <span class="strong"> Подільський-Державний Аграрно-Технічний Університет</span> <br> (рік вступу: 2014; рік закінчення: 2020) <br> <span class="italic">
+                            Диплом бакалавра спеціальність <br> "облік і оподаткування".</span> <br> <span class="strong"> Logos IT Academy <br> (онлайн зайняття)</span>
+                        <br> (рік вступу: 2021-04-27; <br> рік закінчення: 2020-11-10) <br> <span class="italic">
+                            Сертифікат Веб-розробника (HTML and CSS).</span>
+                    </p>
+                    <h3 class="title">Освіта за кордоном</h3>
+                    <p class="about_me_education">
+                        <span class="strong">Business school and Administation Poland</span> <br> Диплом спеціаліста:
+                        <span class="italic"> <br> "Технік безпеки праці".</span>
+                    </p>
+
+                </nav>
+                <div class="languare">
+                    <h3 class="title">Мови: </h3>
+                    <p class="languare_Me">
+                        English - Intermediate
+                        <br> Polski - Upper Intermediate
+                    </p>
+                </div>
+            </div>
+            <div class="container_left">
+                <div class="my_practit">
+                    <h3> Навички:</h3>
+                    <ul>
+                        • Стресостійкість та вміння працювати з дедлайнками. <br> • Комунікабельність. <br> • Знання польської мови на рівні "B2". <br> • Знання англійської мови на рівні "pre-intermediate". <br> • Пунтуальність. <br> • Базові знання "JS"(програмування)
+                </div>
+
+                <div class="aboutMe">
+                    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <div class="my_work">
+                    <h3 class="title margin">Досвіт роботи:</h3>
+                    <p class='about_me_education'> <span class="strong stronger"> На території України:</span> <br> -менеджер продаж банківських активів в компанії“BestWest”
+                        <br> -бухгалтер в ПП"УК"Житлофонд(12.07.2017-24.12.2017)</p>
+                    <p class="about_me_education"> <span class="strong"> На території Польщи</span> працював у фірмі <span class="italic"> Seris Konsalnet</span></p>
+                </div>
+                <div class="bigdiv">
+                    <div class="text">
+                        Pulse Effect
+                    </div>
+                    <div class="containe">
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                        <div class="icon"></div>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
-</header>
-<main class="container col-xxl-10 col-xl-10 col-md-12 col-sm-12 col-xs-12 ">
-    <div class="block">
-        <div class="title-in-block">
-            <h3>How Dreamshare works?</h3>
-        </div>
-        <div class="types-of-work  d-lg-flex justify-content-lg-between">
-            <div class="first-types ">
-                <div class="types-block  ">
-                    <div> <a href="#" class="step-one">STEP 1</a></div>
-                    <h3 class="text-bold">Sed leo enim, condimentum</h3>
-                    <p class="text-footer">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec
-                        rhoncus a leo sit amet facilisis.</p>
-                </div>
-            </div>
-            <div class="second-types  ">
-                <div class="types-block">
-                    <div> <a href="#" class="step-one  ">STEP 2</a></div>
-                    <h3 class="text-bold">Morbi velit risus</h3>
-                    <p class="text-footer">Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet
-                        porttitor est.</p>
-                </div>
-            </div>
-            <div class="third-types ">
-                <div class="types-block">
-                    <div> <a href="#" class="step-one ">STEP 3</a></div>
-                    <h3 class="text-bold">Sed leo enim, condimentum </h3>
-                    <p class="text-footer">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec
-                        rhoncus a leo sit amet facilisis.</p>
-                </div>
-            </div>
-        </div>
-
-
-
-    </div>
-    <section class="group-people">
-        <div class="title-second-block">
-            <h3>Meet a partner for your best holiday</h3>
-        </div>
-        <nav class="images-people_group">
-            <div class="people_group one-people">
-                <div class="imeg_one">
-                    <div class="imeg-next"></div>
-                </div>
-                <h4 class="text-name fw-bold">
-                    Brebley Hunter
-                </h4>
-                <p class="text_after text-center">Based in Chicago. I love playing tennis and loud music.</p>
-            </div>
-            <div class="people_group two-people">
-                <div class="imeg_two">
-                    <div class="imeg-next"></div>
-                </div>
-                <h4 class="text-name  fw-bold">
-                    Marie Bennett
-                </h4>
-                <span>
-                    <p class="text_after  text-center">Currently living in Colorado. Lover of <br> art, languages and
-                        travelling.</p>
-                </span>
-            </div>
-            <div class="people_group three-people">
-                <div class="imeg_three">
-                    <div class="imeg-next"></div>
-                </div>
-                <h4 class="text-name two fw-bold ">Diana Wells</h4>
-                <span>
-                    <p class="text_after two_next text-center">Living in Athens, Greece. I love black and white
-                        classics, chillout music and green tea.</p>
-                </span>
-
-            </div>
-            <div class="people_group four-people">
-                <div class="imeg_four">
-                    <div class="imeg-next"></div>
-                </div>
-                <h4 class="text-name two fw-bold">Christopher Pierce</h4>
-                <span>
-                    <p class="text_after two_next text-center">Star Wars fanatic. I have a <br> persistent enthusiasm to
-                        create <br> new things.</p>
-                </span>
-            </div>
-
-
-            </nav>
-            <div class="button-center d-flex justify-content-center mt-lg-3">
-                <button type="button" class="btn btn-outline-danger border-danger border-text">See other partnerts</button>
-            </div>
-            </section>
-            <nav>
-                <div class="header_title_picture">
-                    <h3>Discover holiday activity ideas</h3>
-                </div>
-                <div class="main_picture d-flex justify-content-center">
-                    <div class="picture img_one d-flex justify-content-center align-items-center">
-
-                        <p class="text_in-images"> Sport and Active</p>
-
-                    </div>
-                    <div class="picture img_two d-flex justify-content-center align-items-center">
-                        <p class="text_in-images"> Wellness and Health</p>
-                    </div>
-                    <div class="picture img_three d-flex justify-content-center align-items-center">
-                        <p class="text_in-images"> Extreme Sports <br> and Expeditions</p>
-                    </div>
-                    <div class="picture img_four d-flex justify-content-center align-items-center">
-                        <p class="text_in-images"> Games</p>
-                    </div>
-                    <div class="picture_next-big img_five d-flex justify-content-center align-items-center">
-                        <p class="text_in-images"> Culture and Education</p>
-                    </div>
-                    <div class="picture_next-big img_six d-flex justify-content-center align-items-center">
-                        <p class="text_in-images"> Enjomet and Relaxation</p>
-                    </div>
-                    <div class="picture img_seven d-flex justify-content-center align-items-center">
-                        <p class="text_in-images"> Travelling</p>
-                    </div>
-                </div>
-
-
-            </nav>
-            <section class="footer">
-                <div class="footer_title">
-                    <h2>Crate your holiday activity</h2>
-                </div>
-                <div class=" div_holiday ">
-                    <span class="text_footer_center">
-                <p class="text_footer ">Hi! What are your holiday interests?</p>
-            </span>
-
-                    <div class="d-flex-colum ">
-                        <form>
-                            <input type="text " class="width " placeholder="Enter your insterests " maxlength="20 ">
-
-                        </form>
-                        <button type="button " class="btn btn-danger color ">Seach partners</button>
-
-                    </div>
-
-                </div>
-            </section>
-            </main>
-            <footer>
-                <div class="container col-xxl-10 col-xl-10 col-lg-10 col-lg-12 col-sm-12 footer_title">
-                    <div class="names_images">
-                        <span class="names_images-span"> DREAMSHARE</h3></span>
-                    </div>
-                    <div class="footer_company">
-                        <span class="company-title">
-                Company
-            </span>
-                        <div class="footer_company_names">
-                            <p class="text_foooter_company">About</p>
-                            <p class="text_foooter_company">Contact</p>
-                            <p class="text_foooter_company">Press</p>
-                            <p class="text_foooter_company">Blog</p>
-                            <p class="text_foooter_company">Terms and Privacy</p>
-                            <p class="text_foooter_company">Help</p>
-                        </div>
-                    </div>
-                    <div class="footer_company">
-                        <span class="company-title">
-                Partners
-            </span>
-                    </div>
-                    <div class="footer_logo">
-                        <p class="title_logo">DESIGNED BY</p>
-                        <img class="img_footer" src="./images/footer.png" alt="">
-                    </div>
-
-                </div>
-            </footer>
-
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js " integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p " crossorigin="anonymous "></script>
-
 </body>
 
 </html>
