--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
+    <script src="/main.js"></script>
     <div class="container">
         <header>
 
@@ -72,8 +73,8 @@
             <div class="container_left">
                 <div class="my_practit">
                     <h3> Навички:</h3>
-                    <ul>
-                        • Стресостійкість та вміння працювати з дедлайнками. <br> • Комунікабельність. <br> • Знання польської мови на рівні "B2". <br> • Знання англійської мови на рівні "pre-intermediate". <br> • Пунтуальність. <br> • Базові знання "JS"(програмування)
+
+                    • Стресостійкість та вміння працювати з дедлайнками. <br> • Комунікабельність. <br> • Знання польської мови на рівні "B2". <br> • Знання англійської мови на рівні "pre-intermediate". <br> • Пунтуальність. <br> • Базові знання "JS"(програмування)
                 </div>
 
                 <div class="aboutMe">
@@ -89,7 +90,7 @@
                     <h3 class="title margin">Досвіт роботи:</h3>
                     <p class='about_me_education'> <span class="strong stronger"> На території України:</span> <br> -менеджер продаж банківських активів в компанії“BestWest”
                         <br> -бухгалтер в ПП"УК"Житлофонд(12.07.2017-24.12.2017)</p>
-                    <p class="about_me_education"> <span class="strong"> На території Польщи</span> працював у фірмі <span class="italic"> Seris Konsalnet</span></p>
+                    <p class="about_me_education"> <span class="strong"> На території Польщи</span> працював у фірмі <span class="italic"> "Seris Konsalnet"</span></p>
                 </div>
                 <div class="bigdiv">
                     <div class="text">
